--- a/login/css/style.css
+++ b/login/css/style.css
@@ -41,6 +41,13 @@ body{
     text-decoration: none;
     font-size: 20px;
     color: #fff;
+    
+    }
+
+    .main-link:hover{
+      color: black;
+      cursor: pointer;
+
     }
     
   
